--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <span class="stats-value score">0</span>
       </div>
       <div class="stats-item">
+        <span>Level:</span>
+        <span class="stats-value level">1</span>
+      </div>
+      <div class="stats-item">
         <span>Misses:</span>
         <span class="stats-value misses">0</span>
       </div>
